--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "description": "iConnect backend server",
   "main": "connection.js",
   "scripts": {
-    "dev":"nodemon ./connection.js",
+    "dev": "nodemon ./connection.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kennedy muthuri",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
