--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "iConnect backend server",
   "main": "connection.js",
   "scripts": {
-    "dev": "nodemon ./connection.js",
+    "start": "nodemon ./connection.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kennedy muthuri",
@@ -13,7 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
